--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -1849,11 +1849,22 @@
         .estimate-table .price-cell {
             background: #fafafa;
             font-size: var(--font-size-md);
+            background: #fafafa;
+            font-size: var(--font-size-md);
+            padding: 0 !important;
+            /* 내부 div가 패딩 처리 */
+            vertical-align: middle;
+        }
+
+        .money-wrapper {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 0 8px;
-            /* 양쪽 여백 */
+            width: 100%;
+            height: 100%;
+            box-sizing: border-box;
+            white-space: nowrap;
         }
 
         /* 금액 셀 (8번째) - 너비 축소, 중앙정렬 */
@@ -1863,15 +1874,7 @@
             /* 금액이 잘리지 않도록 너비 확보 */
         }
 
-        .estimate-table .amount-cell {
-            /* background: #fafafa; 금액 셀은 흰색 유지? */
-            font-size: var(--font-size-md);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 8px;
-            /* 양쪽 여백 */
-        }
+
 
         .estimate-table .amount-cell {
             background: #fafafa;
@@ -6454,8 +6457,8 @@
                             <td class="unit-cell">-</td>
                             <td><input type="number" class="qty-input" value="1" min="0"
                                     onchange="onEstQtyChange(this, '${cat.no}')"></td>
-                            <td class="price-cell" data-price="0" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 0 8px !important; box-sizing: border-box !important; white-space: nowrap !important;"><span style="margin:auto">-</span></td>
-                            <td class="amount-cell" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 0 8px !important; box-sizing: border-box !important; white-space: nowrap !important;"><span style="margin:auto">-</span></td>
+                            <td class="price-cell" data-price="0"><div class="money-wrapper"><span style="margin:auto">-</span></div></td>
+                            <td class="amount-cell"><div class="money-wrapper"><span style="margin:auto">-</span></div></td>
                             <td><textarea class="remark-input" placeholder="" rows="1" oninput="autoResizeTextarea(this)"></textarea></td>
                         </tr>
                     </tbody>
@@ -6552,8 +6555,8 @@
             <td class="unit-cell">-</td>
             <td><input type="number" class="qty-input" value="1" min="0" onchange="onEstQtyChange(this, '${catNo}')">
             </td>
-            <td class="price-cell" data-price="0" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 0 8px !important; box-sizing: border-box !important; white-space: nowrap !important;"><span style="margin:auto">-</span></td>
-            <td class="amount-cell" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 0 8px !important; box-sizing: border-box !important; white-space: nowrap !important;"><span style="margin:auto">-</span></td>
+            <td class="price-cell" data-price="0"><div class="money-wrapper"><span style="margin:auto">-</span></div></td>
+            <td class="amount-cell"><div class="money-wrapper"><span style="margin:auto">-</span></div></td>
             <td><textarea class="remark-input" placeholder="" rows="1" oninput="autoResizeTextarea(this)"></textarea></td>
             `;
             tbody.appendChild(tr);
@@ -6668,9 +6671,9 @@
 
                 row.querySelector('.spec-cell').textContent = spec;
                 row.querySelector('.unit-cell').textContent = unit;
-                row.querySelector('.price-cell').innerHTML = price > 0 ? `<span>₩</span><span>${formatNumber(price)}</span>` : '<span style="margin:auto">-</span>';
+                row.querySelector('.price-cell').innerHTML = `<div class="money-wrapper">${price > 0 ? `<span>₩</span><span>${formatNumber(price)}</span>` : '<span style="margin:auto">-</span>'}</div>`;
                 row.querySelector('.price-cell').dataset.price = price;
-                row.querySelector('.amount-cell').innerHTML = amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="margin:auto">-</span>';
+                row.querySelector('.amount-cell').innerHTML = `<div class="money-wrapper">${amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="margin:auto">-</span>'}</div>`;
             } else {
                 // 항목을 찾지 못한 경우
                 resetEstRowValues(row);
@@ -6708,9 +6711,9 @@
 
             if (!option || !option.value) {
                 row.querySelector('.unit-cell').textContent = '-';
-                row.querySelector('.price-cell').innerHTML = '<span style="margin:auto">-</span>';
+                row.querySelector('.price-cell').innerHTML = '<div class="money-wrapper"><span style="margin:auto">-</span></div>';
                 row.querySelector('.price-cell').dataset.price = '0';
-                row.querySelector('.amount-cell').innerHTML = '<span style="margin:auto">-</span>';
+                row.querySelector('.amount-cell').innerHTML = '<div class="money-wrapper"><span style="margin:auto">-</span></div>';
                 return;
             }
 
@@ -6731,9 +6734,9 @@
             const amount = price * qty;
 
             row.querySelector('.unit-cell').textContent = unit;
-            row.querySelector('.price-cell').innerHTML = price > 0 ? `<span>₩</span><span>${formatNumber(price)}</span>` : '<span style="margin:auto">-</span>';
+            row.querySelector('.price-cell').innerHTML = `<div class="money-wrapper">${price > 0 ? `<span>₩</span><span>${formatNumber(price)}</span>` : '<span style="margin:auto">-</span>'}</div>`;
             row.querySelector('.price-cell').dataset.price = price;
-            row.querySelector('.amount-cell').innerHTML = amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="margin:auto">-</span>';
+            row.querySelector('.amount-cell').innerHTML = `<div class="money-wrapper">${amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="margin:auto">-</span>'}</div>`;
 
             // 소계 업데이트
             const effectiveCatNo = catNo || row.closest('tbody').id.replace('estBody', '');
@@ -6747,7 +6750,7 @@
             const price = parseInt(row.querySelector('.price-cell')?.dataset.price) || 0;
             const qty = parseInt(row.querySelector('.qty-input')?.value) || 1;
             const amount = price * qty;
-            row.querySelector('.amount-cell').innerHTML = amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="margin:auto">-</span>';
+            row.querySelector('.amount-cell').innerHTML = `<div class="money-wrapper">${amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="margin:auto">-</span>'}</div>`;
         }
 
         // 수량 변경
@@ -6757,7 +6760,7 @@
             const qty = parseInt(input.value) || 0;
             const amount = price * qty;
 
-            row.querySelector('.amount-cell').innerHTML = amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="margin:auto">-</span>';
+            row.querySelector('.amount-cell').innerHTML = `<div class="money-wrapper">${amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="margin:auto">-</span>'}</div>`;
             updateCategorySubtotal(catNo);
             updateEstimateTotals();
             saveEstimateData();
@@ -6767,9 +6770,9 @@
         function resetEstRowValues(row) {
             row.querySelector('.spec-cell').textContent = '-';
             row.querySelector('.unit-cell').textContent = '-';
-            row.querySelector('.price-cell').innerHTML = '<span style="margin:auto">-</span>';
+            row.querySelector('.price-cell').innerHTML = '<div class="money-wrapper"><span style="margin:auto">-</span></div>';
             row.querySelector('.price-cell').dataset.price = '0';
-            row.querySelector('.amount-cell').innerHTML = '<span style="margin:auto">-</span>';
+            row.querySelector('.amount-cell').innerHTML = '<div class="money-wrapper"><span style="margin:auto">-</span></div>';
         }
 
         // 카테고리 소계 업데이트
@@ -7040,8 +7043,8 @@
             <td class="unit-cell">${item.unit || '-'}</td>
             <td><input type="number" class="qty-input" value="${item.qty || 1}" min="0"
                     onchange="onEstQtyChange(this, '${cat.no}')"></td>
-            <td class="price-cell" data-price="${price}" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 0 8px !important; box-sizing: border-box !important; white-space: nowrap !important;">${price > 0 ? `<span>₩</span><span>${formatNumber(price)}</span>` : '<span style="margin:auto">-</span>'}</td>
-            <td class="amount-cell" style="display: flex !important; justify-content: space-between !important; align-items: center !important; padding: 0 8px !important; box-sizing: border-box !important; white-space: nowrap !important;">${amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="margin:auto">-</span>'}</td>
+            <td class="price-cell" data-price="${price}"><div class="money-wrapper">${price > 0 ? `<span>₩</span><span>${formatNumber(price)}</span>` : '<span style="margin:auto">-</span>'}</div></td>
+            <td class="amount-cell"><div class="money-wrapper">${amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="margin:auto">-</span>'}</div></td>
             <td><textarea class="remark-input" placeholder="" rows="1" oninput="autoResizeTextarea(this)">${item.remark || ''}</textarea></td>
                         `;
                         tbody.appendChild(tr);
