데이터저장

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3631,7 +3631,9 @@
                                 <button class="sync-btn no-print" onclick="syncCostFromCloud()"
                                     style="background: #34c759; color: white; border: none; padding: 8px 12px; border-radius: 8px; cursor: pointer; font-size: 12px; font-weight: 600;"
                                     title="Google Sheets에서 불러오기">☁️↓ 불러오기</button>
-                                <!-- 저장 버튼 제거됨: 원가관리표는 구글 시트에서만 수정 가능 -->
+                                <button class="no-print" onclick="restoreCostDB()"
+                                    style="background: #ff9500; color: white; border: none; padding: 8px 12px; border-radius: 8px; cursor: pointer; font-size: 12px; font-weight: 600;"
+                                    title="현재 데이터로 DB 복구">🔄 DB복구</button>
                                 <button class="pdf-btn" onclick="downloadPDF('costDoc', '원가관리표')">🖨️ 인쇄/PDF</button>
                             </div>
                         </div>
