Update mobile line breaks for main slider and portfolio hero

--- a/index.html
+++ b/index.html
@@ -1140,8 +1140,11 @@
                     <p class="slide-subtitle">Timeless Design</p>
                     <h1 class="slide-title">튼튼한 기본 위에<br>그리는 아름다움</h1>
                     <p class="slide-description">
-                        트렌드를 쫓기보다, 오래 봐도 편안한 공간.<br>기본이 탄탄해야 아름다움도 오래갑니다.<br>
-                        디자인지그는 그 순서를 지킵니다.
+                        기본이 탄탄해야 아름다움도 오래갑니다.<br class="br-mo">
+                        디자인지그가 인테리어를 대하는 생각,<br class="br-mo">
+                        하자없는 시공의 디테일,<br class="br-mo">
+                        현실적인 가이드까지.<br class="br-mo">
+                        현장에서 쌓은 이야기를 나눕니다.
                     </p>
                     <div class="slide-cta">
                         <a href="/portfolio" class="btn btn-primary">포트폴리오 보기</a>
