--- a/columns.html
+++ b/columns.html
@@ -194,6 +194,16 @@
             margin: 0 auto;
         }
 
+        .br-mo {
+            display: none;
+        }
+
+        @media (max-width: 768px) {
+            .br-mo {
+                display: block;
+            }
+        }
+
         .columns-section {
             max-width: 1200px;
             margin: 0 auto;
@@ -940,7 +950,13 @@
     <main>
         <section class="page-hero">
             <h1>COLUMNS</h1>
-            <p>기본이 탄탄해야 아름다움도 오래갑니다. 디자인지그가 인테리어를 대하는 생각, 하자 없는 시공의 디테일, 현실적인 가이드까지. 현장에서 쌓은 이야기를 나눕니다.</p>
+            <p>
+                기본이 탄탄해야 아름다움도 오래갑니다.<br class="br-mo">
+                디자인지그가 인테리어를 대하는 생각,<br class="br-mo">
+                하자없는 시공의 디테일,<br class="br-mo">
+                현실적인 가이드까지.<br class="br-mo">
+                현장에서 쌓은 이야기를 나눕니다.
+            </p>
         </section>
 
         <section class="columns-section">
