Correct line breaks for columns and index hero text

--- a/columns.html
+++ b/columns.html
@@ -953,8 +953,7 @@
             <p>
                 기본이 탄탄해야 아름다움도 오래갑니다.<br class="br-mo">
                 디자인지그가 인테리어를 대하는 생각,<br class="br-mo">
-                하자없는 시공의 디테일,<br class="br-mo">
-                현실적인 가이드까지.<br class="br-mo">
+                하자없는 시공의 디테일, 현실적인 가이드까지.<br class="br-mo">
                 현장에서 쌓은 이야기를 나눕니다.
             </p>
         </section>
