--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -6035,12 +6035,13 @@
                     const subInfo = (c.clientName || '') + (c.clientName && c.clientPhone ? ' / ' : '') + (c.clientPhone || '');
                     const lockIcon = c.isLocked ? '🔒' : '';
                     const creatorInfo = c.createdBy ? ` / <span style="color:#ff9500; font-weight:600;">${c.createdBy}</span>` : '';
+                    const updateInfo = c.updatedAt ? ` / <span style="color:#ff3b30; font-weight:600;">${c.updatedAt}</span>` : '';
 
                     return `
                 <div class="customer-item ${c.customerId === currentCustomerId ? 'active' : ''}"
                     onclick="selectCustomer('${c.customerId}')">
                     <div class="customer-item-header">
-                        <span class="customer-item-id">${lockIcon}${c.customerId}${creatorInfo}</span>
+                        <span class="customer-item-id">${lockIcon}${c.customerId}${creatorInfo}${updateInfo}</span>
                         <span class="status-badge ${c.status}">${statusText}</span>
                     </div>
                     <div class="customer-item-name" style="font-weight: 700;">${displayName}</div>
@@ -6399,6 +6400,9 @@
                 if (!original.createdBy && currentAdmin) {
                     currentData.createdBy = currentAdmin.id;
                 }
+
+                // 수정일 업데이트
+                currentData.updatedAt = new Date().toISOString().split('T')[0];
 
                 customers[idx] = { ...currentData };
             } else {
