--- a/columns.html
+++ b/columns.html
@@ -483,13 +483,24 @@
         .modal-body .content {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
             font-size: 16px;
-            line-height: 1.5;
+            line-height: 1.75;
             color: #37352f;
+            word-break: break-word;
+            /* 긴 단어 줄바꿈 처리 */
+        }
+
+        /* Mobile specific adjustments for readability */
+        @media (max-width: 768px) {
+            .modal-body .content {
+                font-size: 17px;
+                /* 모바일에서 가독성을 위해 폰트 키움 */
+                line-height: 1.8;
+            }
         }
 
         .notion-h1 {
             font-size: 1.875em;
-            font-weight: 600;
+            font-weight: 700;
             line-height: 1.3;
             margin: 1.4em 0 0.5em 0;
             color: #37352f;
@@ -512,8 +523,21 @@
         }
 
         .modal-body .content p {
-            margin: 2px 0;
+            margin: 6px 0;
+            /* 노션과 유사한 블록 간격 */
             min-height: 1.5em;
+            letter-spacing: -0.01em;
+        }
+
+        .modal-body .content ul,
+        .modal-body .content ol {
+            margin: 4px 0 12px 24px;
+            padding: 0;
+        }
+
+        .modal-body .content li {
+            margin: 2px 0;
+            padding-left: 2px;
         }
 
         .notion-color-gray {
