Increase paragraph margin to visually separate blocks

--- a/columns.html
+++ b/columns.html
@@ -523,11 +523,12 @@
         }
 
         .modal-body .content p {
-            margin: 2px 0;
-            /* 노션처럼 텍스트 블록 간격을 좁게 */
+            margin: 0 0 12px 0;
+            /* 단락(블록) 간 명확한 간격 제공 */
             min-height: 1.5em;
-            /* 최소 높이 */
+            /* 빈 줄 최소 높이 */
             letter-spacing: -0.01em;
+            padding: 0;
         }
 
         /* 빈 문단(Spacer) 스타일: 확실한 높이 확보 */
