--- a/columns.html
+++ b/columns.html
@@ -523,19 +523,20 @@
         }
 
         .modal-body .content p {
-            margin: 0 0 12px 0;
-            /* 단락(블록) 간 명확한 간격 제공 */
+            margin: 0 0 2px 0;
+            /* 글줄 간격은 좁게 (2px) */
             min-height: 1.5em;
-            /* 빈 줄 최소 높이 */
             letter-spacing: -0.01em;
             padding: 0;
         }
 
-        /* 빈 문단(Spacer) 스타일: 확실한 높이 확보 */
+        /* 빈 문단(Spacer) 스타일: 문단 간격 12px 확보 */
         .notion-spacer {
-            height: 1.5em;
+            height: 12px;
+            /* 눈에 보이는 공백 높이 */
+            min-height: 12px;
             display: block;
-            /* 블록 요소로 처리 */
+            margin: 0;
         }
 
         .modal-body .content ul,
